plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

group 'com.github.rweisleder'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.13'
}

compileTestJava {
    options.compilerArgs += '--enable-preview'
}

test {
    jvmArgs += '--enable-preview'

    testLogging {
        events "passed", "failed"

        showExceptions true
        exceptionFormat "full"
        showCauses true
        showStackTraces true
    }
}